--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^8.0",
     "doctrine/orm": "^2.7",
     "webmozart/assert": "^1.9"
   },
@@ -22,7 +22,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.4",
     "phpstan/phpstan": "^0.12.76",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "symfony/cache": "^6.3"
   },
   "autoload-dev": {
     "psr-4": {
