--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     }
   ],
   "require": {
-    "php": "^8.0",
-    "doctrine/orm": "^2.7",
-    "webmozart/assert": "^1.9"
+    "php": "^8.1",
+    "doctrine/orm": "^3.1",
+    "doctrine/dbal": "^4.0",
+    "webmozart/assert": "^1.11"
   },
   "autoload": {
     "psr-4": {
@@ -21,9 +22,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.4",
-    "phpstan/phpstan": "^0.12.76",
-    "squizlabs/php_codesniffer": "^3.5",
-    "symfony/cache": "^5.4|^6.0"
+    "phpstan/phpstan": "^1.11",
+    "squizlabs/php_codesniffer": "^3.9",
+    "symfony/cache": "^5.4|^6.0|^7.0"
   },
   "autoload-dev": {
     "psr-4": {
