--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,10 @@
 parameters:
   level: max
-  checkMissingIterableValueType: false
-  checkGenericClassInNonGenericObjectType: false
   paths:
     - src/
 
   ignoreErrors:
+    - identifier: missingType.iterableValue
+    - identifier: missingType.generics
     # callable with array syntax is not inferred
     - '#.*function call_user_func expects callable.*#'
