--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -6,6 +6,12 @@ on:
       php-version:
         required: true
         type: string
+      dbal-version:
+        required: true
+        type: string
+      orm-version:
+        required: true
+        type: string
       coverage-mode:
         required: false
         type: string
@@ -25,4 +31,6 @@ runs:
     - name: "Install dependencies with composer"
       shell: bash
       run: |
+        composer require --quiet --no-update "doctrine/orm:${{ inputs.orm-version }}"
+        composer require --quiet --no-update "doctrine/dbal:${{ inputs.dbal-version }}"
         composer update --no-interaction --no-progress --no-suggest
